source/assets_site/stylesheets/_index.css.scss
body.index {
  h1 em {
    font-weight: 800;
  }

  .section1 {
    position: relative;
    color: $background_gray;
    font-weight: 300;
    background-color: $blue-gray;

    > .inner {
       @include outer-container(100%);
       padding: 22vh 0 10vh;
       position: relative;
       z-index: 10;
       min-height: 90vh;

       *:first-child { margin-top: 0; } // ?
    }

    .hero-content {
      @include span-columns(12);
      text-align: center;

      & h1 {
        @include media($medium-screen) {
          font-size: 450%;
        }

        @include media($large-screen) {
          font-size: 600%;
        }

        font-size: 2.5em;
        font-weight: 300;
        margin: 0 10px;
        font-weight: 300;
        text-shadow: 1.5px 1.5px 5px rgba(0, 0, 0, 0.5);
      }

      & .hero-text {
        margin-bottom: 2em;
      }

      p.subheading {
        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
        font-family: $heading-font-family;
        line-height: 1.4;
        margin: 1em 0 1em;
        text-align: center;
        font-size: 1.2em;

        @include media($medium-screen) {
          font-size: 1.5em;
        }
      }
    }

    @include media($medium-screen) {
      .hero-tri-text {
        width: 100px;
        background-color: transparent;
        height: 100px;
        position: absolute;
        right: 0;
        bottom: 0;
        z-index: 1;
        stroke: transparent;
        stroke-width: 10px;
        align-content: center;
      }

      .hero-triangle-text {
        color: #009926;
      }

      .hero-triangle {
        width: 0px;
        height: 0px;
        border-style: solid;
        border-width: 0 0 300px 200px;
        z-index: 1;
        position: absolute;
        right: 0;
        bottom: 0;
        border-color: transparent transparent black transparent;
      }
    }

    .background {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      z-index: 1;

      background: image-url("index/section1/go-hero-team.jpg");
      background-position-x: 60%;
      background-size: cover;
    }

    .view-details {
      @include span-columns(12 of 12);
      text-align: center;
    
      .arrow {
        background: image-url("index/section1/arrow.svg");
        background-size: cover;
        width: 45px;
        height: 45px;
        display: block;
        text-align: center;
        margin: 0 auto 4px;
      }
    }
  }

  .section2 {
    @include title-styles;
    > .inner {
      @include outer-container;
      padding: 3vh 0;
      @include media($medium-screen) {
        padding: 6vh 0;
      }
    }

    .cards {
      position: relative;
      @include clearfix;

      .card {
        @include span-columns(10 of 12);
        @include shift(1);

        @include media($medium-screen) {
          @include span-columns(4 of 12);
          @include shift(7);
          padding: 30vh 0 30vh 0;
        }

        padding: 0 0 5vh;
        position: relative;

        &:last-child {
          padding-bottom: 0;
        }
      }
    }

    .images {
      > .inner {
        position: relative;
        max-width: 68em;
        margin: 0 auto;
      }

      position: absolute;
      left: 0;
      right: 0;
      display: none;

      @include media($medium-screen) {
        display: block;
      }

      .card_image {
        position: absolute;
        top: 0;
        left: 10%;
        max-width: 50%;
        max-height: 55vh;

        @include media($medium-screen) {
          max-width: 40%;
          max-height: 45vh;
        }

        &:first-child { position: relative; }
      }
    }

    @include media($medium-screen) {
      .section2-triangle {
        position: absolute;
        width: 60vw;
        height: 0;
        border-color: transparent transparent transparent rgb(138, 77, 200);
        border-style: solid;
        border-width: 0 0 300px 200px;
      }
    }
  }

  .section3 {
    @include title-styles;
    background-color: #f5f5f5;
    padding: 5vh 0;


    @include media($large-screen) {
      > .inner {
        display: flex;
      }
      .support-features {
          width: 50%;
      }
    }

    > .inner {
      @include outer-container;
      padding: 0 5vh;
    }

    .support-icon {
      max-width: 0;
      height: 0;
      @include media($large-screen) {
        max-width: 20%;
        height: auto;
      }
    }

    .column {
      padding: 5vh 0;

      @include media($medium-screen) {
        @include span-columns(6 of 12);
      }
    }

    ul {
      @extend %default-ul;
    }
  }

  .section4 {
    @include title-styles;
    $container_width: 90%;
    position: relative;

    > .inner {
      @include outer-container($container_width);
      padding: 0 5vh;
    }

    .pricing {
      padding-bottom: 60px;

      .row {
        @include fill-parent();
        @include row(table);
        padding: 0.5em 0;
        text-align: center;

        h2 {
          text-align: center;
        }
        .number-of-pipelines {
          @include span-columns(4 of 12);
        }

        .addons-included {
          @include span-columns(4 of 12);
        }

        .price {
          @include span-columns(4 of 12);
        }

        &:last-child {
          border-bottom: transparent;
          @include reset-display;
        }

        &:nth-child(even) {
          background-color: #f1f1f1;
        }
      }
    }
  }

  .section5 {
    @include title-styles;
    position: relative;

    > .inner {
      @include outer-container(100%);
      padding: 5vh 0;
    }

    .marketo-form {
      @include span-columns(12);
      padding: 0 5vh;
      background-color: #f476ca;
      border: 0;
      font: inherit;
      font-size: 100%;
      vertical-align: baseline;

      .cf_sign_on {
        display: none;
      }

      .mktoLabel {
        margin-bottom: 10px;
      }

      button.mktoButton {
        margin-top: 10px;
      }

      @include media($medium-screen) {
        @include span-columns(4);
        @include shift(1);
        background-color: transparent;
      }
    }

    .contact-us {
      @include span-columns(10);
      @include shift(1);

      .contact-number {
        color: $standout_text_color;
      }

      @include media($medium-screen) {
        @include span-columns(4);
        @include shift(3);
        margin-top: 10%;
      }
    }

    @include media($large-screen) {
      background-color: $background_gray;

      .background {
        position: absolute;
        width: 100%;
        height: 100%;
        left: 0;
        top: 0;
        background: image-url("index/section5/background.svg");
        background-size: cover;
      }
    }
  }

  .section6 {
    background-color: $background_gray;
    min-height: auto;
    padding-top: 2px;
    position: relative;
    @include title-styles;
    @include media($large-screen) {
      > .inner {

      }

      .bottom {
        display: inline-flex;
      }
      .background {
        position: absolute;
        width: 60%;
        height: 100%;
        right: 0;
        top: 0;
        background: image-url("index/section6/background.svg");
        background-size: cover;
      }
      .jez-section {
        width: 50%;
        float: right;

        #jez-quote {
          color: white;
          text-align: right;
        }
      }
      .fowler-section {
        width: 50%;
      }
      .text-portion {
        width: 50%;
      }

      .jez-images {
        width: 100%;
        display: flex;
        justify-content: flex-end;
      }
    }

    > .inner {
      @include outer-container;
      padding: 0 0;
      width: 100vw;

      .joke {
        font-size: 0.7em;
        color: $gray;
        font-style: italic;
        margin-bottom: 1.5em;
      }
      .fowler-section {
        position: relative;

        #fowler-img {
          max-width: 45%;
          margin: 2%;
        }
        #refactoring-book {
          max-width: 45%;
          margin: 2%;
        }
      }

      .jez-section {
        position: relative;
        max-width: 100vw;
        #jez-img {
          max-width: 45%;
          margin: 2%;
        }
        #CD-book {
          max-width: 45%;
          margin: 2%;
        }
        #jez-quote {
          font-size: 0.9em;
          text-align: right;
          padding: 1em;
        }
        .name {
          font-style: italic;
        }
      }


      .text-portion {
        text-align: center;
      }

    }

  }

  .section7 {
    @include title-styles;
    > .inner {
      @include outer-container(100%);
    }

    .header {
      font-size: 250%;
      padding: 12vh 0 4vh 0;
      margin-top: 0;
    }

    .logo-wrap {
      text-align: center;
    }

    .customer-logo {
      margin: 0 3vw;
    }
  }
  .fixedNav {
    display: none;
    position: fixed;
    top: 50%;
    right: 2rem;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    z-index: 1000;

    @include media($medium-screen) {
      display: block;
    }

    li {
      text-align: right;
    }

    a {
      position: relative;
      color: transparent;
      cursor: pointer;
      display: block;
      font-size: 12px;

      -webkit-transition: color 0.2s ease-out;
      transition: color 0.2s ease-out;

      &:hover { color: #6A6B6D; }

      &.active:after {
        background: #6A6B6D;
        width: 10px;
        height: 10px;
        right: -16px;
      }

      &:after {
        content: '';
        display: block;
        width: 8px;
        height: 8px;
        position: absolute;
        top: 50%;
        right: -15px;
        -webkit-transform: translateY(-50%);
        transform: translateY(-50%);

        background: #C6C7C8;
        border-radius: 8px;
        border: 1px solid #C0C0C0;

        -webkit-transition: all 0.2s ease-out;
      }
    }
  }
}

